--- a/foundations/intro-to-css/03-grouping-selectors/style.css
+++ b/foundations/intro-to-css/03-grouping-selectors/style.css
@@ -1,1 +1,15 @@
 /* Add CSS Styling */
+.button-black {
+    background-color: black;
+    color: white;
+}
+
+.button-yellow {
+    background-color: yellow;
+}
+
+.button-black,
+.button-yellow {
+    font-family: "Helvetica", "Times New Roman", "sans-serif";
+    font-size: 28px;
+}
