--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
-  font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  font-family: monospace;
 }
 
 .logo {
@@ -13,7 +17,20 @@
 
 ul {
   /* this removes the dots on the list items*/
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  gap: 8px;
   list-style-type: none;
+}
+
+.left-links {
+  margin-left: 20px;
+}
+
+.right-links {
+  margin-right: 20px;
 }
 
 a {
